--- a/src/content/docs/book/part-1-instructions/1-sequence/5-reference/16-identifier.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/5-reference/16-identifier.mdx
@@ -6,7 +6,7 @@ sidebar:
 
 import CommmonLink from '/src/components/CommonLink.astro'
 
-**Identifier** is the term for the name/word that *identifies* something for the compiler. This could be the **name** of a building block (such as a variable, constant, or method) or words that have special meaning for the compiler. You use identifiers to name the things (building blocks) you create, and to refer to those you want to use.
+**Identifier** is the term for the word that *identifies* something for the compiler. This could be the **name** of a building block (such as a procedure) or words that have special meaning for the compiler. You use identifiers to name the things you create, and to refer to things you want to use.
 
 As identifiers are used to name building blocks, the overall concept relates to many others.
 The concept map below shows some of the key relations based on what we have learned so far.
@@ -28,10 +28,10 @@ Programming languages require you to name things without spaces so that the comp
 - **PascalCase**: use an upper case character at the start of each word.
 - **kebab-case**: all lower case letters with hyphens (`-`) to separate words.
 
-Every programming language has **coding conventions** that indicate which format to use for identifiers for different building blocks. In C++ we will use snake_case for procedure names.
+Every programming language has **coding conventions** that indicate which format to use for identifiers. For example, the convention in C++ is to use snake_case for procedure names.
 
 :::tip
-Following the coding convention of the language is really important. This makes your code look and feel like other code from that language. Doing this will make it easier for others to engage with what you do. Break the convention, and others will doubt the quality of your code and contributions.
+Following the conventions of a programming language is really important. This makes your code look and feel like other code from that language. Doing this will make it easier for others to engage with what you do. Break the convention, and others will doubt the quality of your code and contributions.
 :::
 
 ## In C++
@@ -44,15 +44,13 @@ The following diagram shows the C++ syntax for an identifier.
 <CommmonLink type="syntaxDiagramGuide"/>
 :::
 
-- Identifiers must start with an underscore (`_`) or a letter. This is because the compiler needs a way of distinguishing identifiers from numbers entered directly into the code.
-- An identifier can not contain spaces, or special characters other than underscores.
-- After the first character, an identifier can contain zero or more additional characters which are letters, digits, or underscores.
+Identifiers must start with an underscore (`_`) or a letter. This is because the compiler needs a way of distinguishing identifiers from numbers entered directly into the code. An identifier can not contain spaces, or special characters other than underscores. After the first character, an identifier can contain zero or more additional characters which are letters, digits, or underscores.
 
 ### Keywords
 
 While you can name the building blocks in your program almost anything, there are some reserved words that have special meaning to the language. These are called **keywords**. You cannot use these -- they are taken for another purpose.
 
-Most of the time this doesn't cause any issues, but sometimes you have to work around it. For example `class` is taken, so you can't call anything a `class` which can be a pain if you are building education related software.
+Most of the time this doesn't cause any issues, but sometimes you have to work around it. For example `class` is taken, so you can't call anything `class` which can be a pain if you are building education related software.
 
 The keywords in C++ are listed in the table below.
 All of these are valid identifiers according to our syntax rule, you just can't use them to name things.
