--- a/src/content/docs/book/part-1-instructions/1-sequence/5-reference/30-library.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/5-reference/30-library.mdx
@@ -11,9 +11,9 @@ The image below shows the concepts related to a library.
 
 ## Libraries -- when, why, and how
 
-Building programs requires many, many, instructions. You can build all of these yourself, but this will reinvent much of what already exists elsewhere. Libraries provide a way of packaging up code to be shared and used by others.
+Building programs requires many, many, instructions. You can build all of these yourself, but a lot of what you will need will already exist elsewhere. Libraries provide a way of packaging up code to be shared and used by others so that programmers don't have to keep reinventing work that has already been done.
 
-As your programming capabilities grow, you will want to start exploring available libraries and how to use them. For now, we will look at a small part of the C++ standard libraries, as well as features of the SplashKit library. This will give you a taste of using other libraries, and help you develop the skills needed to use code that others have provided. This will help you be able to use any library you want to use in the future.
+As your programming capabilities grow, you will want to start exploring libraries available in the language you are using, and how to use them. For now, we will look at a small part of the C++ standard libraries, as well as features of the SplashKit library. This will give you a taste of using other libraries, and help you develop the skills needed to use code that others have provided. This will help you be able to use any library you want to use in the future.
 
 ## In C++
 
@@ -24,14 +24,14 @@ We will explore creating our own libraries later in our journey. For now, you ca
 <CommmonLink type="syntaxDiagramGuide"/>
 :::
 
-In a C++ project, the **`#include` directive** lets you access the code in a library. Once you add this directive you will be able to directly call any of the procedures within that part of the library.
+In a C++ project, the **`#include` directive** lets you access the code in a library. Once you add this directive you will be able to call any of the procedures within that part of the library.
 
 ![Illustration of code using the SplashKit library](./images/library-pano.png)
 
 :::note[Summary]
 
 - A library is a **construct** that contains building blocks for others to use.
-- In C++, libraries provide [procedures](/book/part-1-instructions/1-sequence/5-reference/10-procedure) that perform useful tasks.
+- Libraries can provide [procedures](/book/part-1-instructions/1-sequence/5-reference/10-procedure) that perform useful tasks.
 - Standard libraries typically provide procedures to read and write to standard input and output, and perform data conversions.
 - SplashKit is an external library that contains code to help you build graphical programs as you start to learn.
 
