--- a/src/content/docs/book/part-1-instructions/1-sequence/4-activities/2-test-your-knowledge.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/4-activities/2-test-your-knowledge.mdx
@@ -5,4 +5,5 @@ import { YouTube } from 'astro-embed';
 
 Having explored this leg of the journey you are now approaching a rest stop and a chance to practice and reflect. Test what you have learnt by creating the following program:
 
-- [Draw an animated scene](/book/part-1-instructions/1-sequence/4-activities/3-drawing) using SplashKit graphics.
+- [Creative Drawing](/book/part-1-instructions/1-sequence/4-activities/3-drawing)
+- [Morse Code](/book/part-1-instructions/1-sequence/4-activities/4-morse)
